2009-09-03  Cyril Robert <crobert@inverse.ca>

	* UI/Contacts/UIxContactsListView.m: Added ldif / vcard import
	* UI/Contacts/UIxContactsListView.m: Changed return types to know how many
	cards were imported.

2009-09-02  Cyril Robert <crobert@inverse.ca>

	* UI/Contacts/UIxContactsListView.m (exportAction): Added to support export.
	* UI/Scheduler/UIxCalView.m (exportAction): Added to support export.
	* SoObjects/Appointments/SOGoAppointmentFolder.m (importComponent): Added to
	support import.
	* UI/Scheduler/UIxCalView.m (importAction): Added to support import.

2009-08-27  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoCalendarProxy.[hm]: new class module
	implementing the caldav proxy collections mentionned below. This
	is a subclass of SOGoFolder.

	* SoObjects/SOGo/WORequest+SOGo.m (-isAppleDAVWithSubstring:): new
	method.
	(-isICal): new method.

	* SoObjects/SOGo/SOGoUserFolder.m
	(-calendarProxy:withWriteAccess:): new method that instantiate a
	proxy collections for read and write delegations.

	* SoObjects/SOGo/SOGoParentFolder.m (-initSubscribedFolders): we
	now make use of appendSubcribedSources with which we shared code.

	* SoObjects/SOGo/SOGoGCSFolder.m (-subscribeUser:reallyDo:): new
	simplified and published version of
	subscribe:inTheNamesOf:fromMailInvitation:inContext:.

	* SoObjects/SOGo/SOGoFolder.m (-davGroupMemberSet)
	(davGroupMembership): new DAV accessors that return an empty
	array.

	* SoObjects/Appointments/SOGoUserFolder+Appointments.m
	(-davGroupMembership): new DAV accessor.

	* SoObjects/Appointments/SOGoAppointmentFolders.m
	(-toManyRelationshipKeys): overriden method for iCal: we don't
	list the folders to which the current user is subscribed to
	(because the iCal paradigm now requires calendar proxying), we
	don't list the folders to which a delegator has subscribed to
	either nor any of his/her secondary calendars.
	(-proxyFoldersWithWriteAccess:): new methods that returns the list